--- a/index.html
+++ b/index.html
@@ -3,113 +3,285 @@
 
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ketonal</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-    
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Ketonal</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 
-<body>
-<header class="header">
-    <div class="logo">
-        <img src="/src/ketonal.png" alt="Ketonal Logo" class="logo-img">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
+              rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
+              rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+              rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="stylesheet" href="index.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+    </head>
+
+    <body>
+    <video autoplay muted loop playsinline class="background-video">
+        <source src="/src/background.mp4" type="video/mp4">
+    </video>
+
+    <div class="container">
+        <header class="header">
+            <div class="header-left">
+                <div class="logo">
+                    <img src="/src/ketonal.png" alt="Ketonal Logo" class="logo-img">
+                </div>
+
+                <nav class="nav-menu">
+                    <a href="#about" class="nav-link">О проекте</a>
+                    <a href="/wiki" class="nav-link">Вики</a>
+                    <a href="#" class="nav-link">Новости</a>
+                </nav>
+            </div>
+
+            <div class="header-controls">
+                <button class="theme-toggle" id="themeToggle">
+                    <i class="fas fa-moon"></i>
+                </button>
+                <button class="discord-login-btn" onclick="loginWithDiscord()">
+                    <i class="fab fa-discord"></i>
+                    <span>Войти</span>
+                </button>
+            </div>
+        </header>
+
+        <main class="main-content">
+
+            <section class="hero-section">
+                <h1 class="hero-title">KETONAL</h1>
+                <p class="hero-subtitle">Уникальный Minecraft сервер с дружным сообществом и т.д</p>
+            </section>
+
+
+            <section id="about">
+                <h1 class="section-title">О проекте</h1>
+                <div class="cards-container">
+                    <div class="glass-card">
+                        <i class="fas fa-users"></i>
+                        <h3>Дружное сообщество</h3>
+                        <p>Наш сервер объединяет людей, которые любят Minecraft и ценят хорошую компанию. Мы заботимся о
+                            том, чтобы каждый игрок чувствовал себя частью нашего сообщества.</p>
+                    </div>
+                    <div class="glass-card">
+                        <i class="fas fa-cube"></i>
+                        <h3>Уникальные моды</h3>
+                        <p>Мы разработали эксклюзивные модификации, которые превращают обычный геймплей в нечто особенное.
+                            Откройте для себя новые возможности в знакомом мире!</p>
+                    </div>
+                    <div class="glass-card">
+                        <i class="fas fa-dragon"></i>
+                        <h3>Проработанный лор</h3>
+                        <p>Погрузитесь в глубокую и захватывающую историю нашего сервера. Каждый элемент мира имеет свою
+                            историю и значение в общем повествовании.</p>
+                    </div>
+                </div>
+
+                <h2 class="section-title">Таймлайн создания проекта</h2>
+
+                <div class="vertical-timeline">
+                    <div class="timeline-dots">
+                        <div class="timeline-dot active" data-index="0"></div>
+                        <div class="timeline-dot" data-index="1"></div>
+                        <div class="timeline-dot" data-index="2"></div>
+                        <div class="timeline-dot" data-index="3"></div>
+                    </div>
+
+                    <div class="timeline-line"></div>
+
+                    <div class="timeline-content">
+                        <div class="timeline-slides">
+                            <div class="timeline-slide active">
+                                <div class="timeline-item">
+
+                                    <h3>Основание проекта</h3>
+                                    <p>ыыыыыыыыыыыыыыыыыыы</p>
+                                </div>
+                            </div>
+                            <div class="timeline-slide">
+                                <div class="timeline-item">
+                                    <h3>Разработка плагинов</h3>
+                                    <p>ыыыыыыыыыыыыыыыыыыы</p>
+                                </div>
+                            </div>
+                            <div class="timeline-slide">
+                                <div class="timeline-item">
+                                    <h3>Разработка плагинов</h3>
+                                    <p>ыыыыыыыыыыыыыыыыыыы</p>
+                                </div>
+                            </div>
+                            <div class="timeline-slide">
+                                <div class="timeline-item">
+                                    <h3>Разработка плагинов</h3>
+                                    <p>ыыыыыыыыыыыыыыыыыыы</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="timeline-nav">
+                        <button class="timeline-nav-btn prev-btn" disabled>
+                            <i class="fas fa-chevron-up"></i>
+                        </button>
+                        <button class="timeline-nav-btn next-btn">
+                            <i class="fas fa-chevron-down"></i>
+                        </button>
+                    </div>
+                </div>
+
+
+            </section>
+            <h2 class="section-title">Начни играть с нами сейчас!</h2>
+
+            <section class="play-section">
+                <div class="play-content">
+                    <div class="play-text">
+                        <p>Добро пожаловать на Ketonal — уникальный Minecraft сервер, созданный с любовью к игре и
+                            комьюнити!</p>
+                        <p>Наш сервер предлагает эксклюзивный игровой опыт с кастомными модами, тщательно проработанным
+                            лором и
+                            регулярными ивентами.</p>
+                        <p>Мы стремимся создать дружелюбное и welcoming сообщество, где каждый игрок может найти себе
+                            занятие по
+                            душе: от строительства величественных замков до захватывающих PVP-сражений.</p>
+                        <p>Присоединяйся к нам и стань частью этой удивительной вселенной!</p>
+
+                    </div>
+                    <iframe src="https://discord.com/widget?id=1404399761032872038&theme=light" width="350" height="500"
+                            allowtransparency="true" frameborder="0"
+                            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                </div>
+
+            </section>
+
+        </main>
+
+        <footer class="footer mtop-10">
+            <div class="footer-container">
+                <div class="footer-left">
+                    <div class="logo">
+                        © 2025 Ketonal Project
+                    </div>
+                    <div class="disclaimer">
+                        Мы никак не связаны с Minecraft®, Mojang Studios® или Microsoft®.
+                    </div>
+                </div>
+                <div class="social-buttons">
+                    <a class="social-btn discord-btn" href="https://discord.gg/YtrczGpanH" target="_blank">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M14.82 4.26a10.14 10.14 0 0 0-.53 1.1 14.66 14.66 0 0 0-4.58 0 10.14 10.14 0 0 0-.53-1.1 16 16 0 0 0-4.13 1.3 17.33 17.33 0 0 0-3 11.59 16.6 16.6 0 0 0 5.07 2.59A12.89 12.89 0 0 0 8.23 18a9.65 9.65 0 0 1-1.71-.83 3.39 3.39 0 0 0 .42-.33 11.66 11.66 0 0 0 10.12 0q.21.18.42.33a10.84 10.84 0 0 1-1.71.84 12.41 12.41 0 0 0 1.08 1.78 16.44 16.44 0 0 0 5.06-2.59 17.22 17.22 0 0 0-3-11.59 16.09 16.09 0 0 0-4.09-1.35zM8.68 14.81a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.93 1.93 0 0 1 1.8 2 1.93 1.93 0 0 1-1.8 2zm6.64 0a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.92 1.92 0 0 1 1.8 2 1.92 1.92 0 0 1-1.8 2z"/>
+                        </svg>
+                    </a>
+
+                    <a class="social-btn youtube-btn">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </footer>
+
+        <script>
+            document.getElementById('themeToggle').addEventListener('click', function () {
+                document.body.classList.toggle('light-theme');
+                const icon = this.querySelector('i');
+
+                if (document.body.classList.contains('light-theme')) {
+                    icon.classList.remove('fa-moon');
+                    icon.classList.add('fa-sun');
+                } else {
+                    icon.classList.remove('fa-sun');
+                    icon.classList.add('fa-moon');
+                }
+            });
+
+            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+                anchor.addEventListener('click', function (e) {
+                    e.preventDefault();
+
+                    const targetId = this.getAttribute('href');
+                    if (targetId === '#') return;
+
+                    const targetElement = document.querySelector(targetId);
+                    if (targetElement) {
+                        window.scrollTo({
+                            top: targetElement.offsetTop - 100,
+                            behavior: 'smooth'
+                        });
+                    }
+                });
+            });
+
+            window.addEventListener('scroll', function () {
+                const scrollPosition = window.scrollY;
+                const video = document.querySelector('.background-video');
+                const blurIntensity = scrollPosition >= 2000 ? 16 : (scrollPosition / 2000 * 16);
+                video.style.filter = `blur(${blurIntensity}px)`;
+            });
+        </script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                const slides = document.querySelectorAll('.timeline-slide');
+                const dots = document.querySelectorAll('.timeline-dot');
+                const prevBtn = document.querySelector('.prev-btn');
+                const nextBtn = document.querySelector('.next-btn');
+                const progress = document.querySelector('.progress');
+                let currentIndex = 0;
+                const totalSlides = slides.length;
+
+                function updateSlider() {
+                    slides.forEach(slide => {
+                        slide.classList.remove('active');
+                    });
+                    slides[currentIndex].classList.add('active');
+                    dots.forEach((dot, index) => {
+                        dot.classList.toggle('active', index === currentIndex);
+                    });
+                    prevBtn.disabled = currentIndex === 0;
+                    nextBtn.disabled = currentIndex === totalSlides - 1;
+                    progress.style.width = `${((currentIndex + 1) / totalSlides) * 100}%`;
+                }
+
+                prevBtn.addEventListener('click', () => {
+                    if (currentIndex > 0) {
+                        currentIndex--;
+                        updateSlider();
+                    }
+                });
+                nextBtn.addEventListener('click', () => {
+                    if (currentIndex < totalSlides - 1) {
+                        currentIndex++;
+                        updateSlider();
+                    }
+                });
+                dots.forEach(dot => {
+                    dot.addEventListener('click', () => {
+                        currentIndex = parseInt(dot.getAttribute('data-index'));
+                        updateSlider();
+                    });
+                });
+                document.addEventListener('keydown', (e) => {
+                    if (e.key === 'ArrowUp' && currentIndex > 0) {
+                        currentIndex--;
+                        updateSlider();
+                    } else if (e.key === 'ArrowDown' && currentIndex < totalSlides - 1) {
+                        currentIndex++;
+                        updateSlider();
+                    }
+                });
+                updateSlider();
+            });
+        </script>
     </div>
-<!--    <div class="ip-box" id="ipBox">
-        <span class="ip-text">mc.ket0nal.ru</span>
-        <div class="copy-icon">
-            <i class="fas fa-copy"></i>
-        </div>
-    </div> -->
-</header>
-<main>
-    <section id="scroll-block">
-        <div class="mediapreview">
-
-            <div class="media1">
-                <img src="/src/1.png" alt="Screenshot of ketonal" class="bg" height="300px">
-            </div>
-            <div class="media2">
-                <img src="/src/2.png" alt="Screenshot of ketonal" class="bg" height="300px">
-            </div>
-            <div class="media3">
-                <img src="/src/3.png" alt="Screenshot of ketonal" class="bg" height="300px">
-            </div>
-            <div class="media4">
-                <img src="/src/4.png" alt="Screenshot of ketonal" class="bg" height="300px">
-            </div>
-            <div class="media5">
-                <img src="/src/5.png" alt="Screenshot of ketonal" class="bg" height="300px">
-            </div>
-            <div class="media6">
-                <img src="/src/6.png" alt="Screenshot of ketonal" class="bg" height="300px">
-            </div>
-            <div class="media7">
-                <img src="/src/7.png" alt="Screenshot of ketonal" class="bg" height="300px">
-            </div>
-            <div class="media8">
-                <img src="/src/8.png" alt="Screenshot of ketonal" class="bg" height="300px">
-            </div>
-            <span class="mediaketonal">Ketonal</span>
-        </div>
-    </section>
-    <div class="description">
-        <span class="description-text">Майнкрафт сервер</span>
-        <hr class="solid">
-    </div>
-</main>
-<script>
-    const ipBox = document.getElementById('ipBox');
-    const ipText = ipBox.querySelector('.ip-text');
-    ipBox.addEventListener('click', () => {
-        console.log(213)
-        navigator.clipboard.writeText(ipText.textContent);
-        ipBox.classList.add('success');
-        const pulse = document.createElement('div');
-        pulse.classList.add('pulse');
-        ipBox.appendChild(pulse);
-        setTimeout(() => {
-            ipBox.classList.remove('success');
-            pulse.remove();
-        }, 1500);
-    });
-</script>
-<footer class="footer">
-    <div class="footer-container">
-        <div class="footer-left">
-            <div class="logo">
-                © 2025 Kentonal Project
-            </div>
-            <div class="disclaimer">
-                Мы никак не связаны с Minecraft®, Mojang Studios® или Microsoft®.
-            </div>
-        </div>
-        <div class="social-buttons">
-            <a class="social-btn discord-btn" href="https://discord.gg/YtrczGpanH" target="_blank">
-                <svg viewBox="0 0 24 24">
-                    <path d="M14.82 4.26a10.14 10.14 0 0 0-.53 1.1 14.66 14.66 0 0 0-4.58 0 10.14 10.14 0 0 0-.53-1.1 16 16 0 0 0-4.13 1.3 17.33 17.33 0 0 0-3 11.59 16.6 16.6 0 0 0 5.07 2.59A12.89 12.89 0 0 0 8.23 18a9.65 9.65 0 0 1-1.71-.83 3.39 3.39 0 0 0 .42-.33 11.66 11.66 0 0 0 10.12 0q.21.18.42.33a10.84 10.84 0 0 1-1.71.84 12.41 12.41 0 0 0 1.08 1.78 16.44 16.44 0 0 0 5.06-2.59 17.22 17.22 0 0 0-3-11.59 16.09 16.09 0 0 0-4.09-1.35zM8.68 14.81a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.93 1.93 0 0 1 1.8 2 1.93 1.93 0 0 1-1.8 2zm6.64 0a1.94 1.94 0 0 1-1.8-2 1.93 1.93 0 0 1 1.8-2 1.92 1.92 0 0 1 1.8 2 1.92 1.92 0 0 1-1.8 2z"/>
-                </svg>
-            </a>
-
-            <a class="social-btn youtube-btn">
-                <svg viewBox="0 0 24 24">
-                    <path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/>
-                </svg>
-            </a>
-        </div>
-    </div>
-</footer>
-
-</body>
+    </body>
+</div>
 </html>
